Moved CSS states into media queries to make sure that it would be active on mobile and hover on any other screen width larger than 500px.

--- a/style.css
+++ b/style.css
@@ -74,11 +74,6 @@ body {
   cursor: pointer;
 }
 
-.right a:hover {
-  color: hsl(224, 23%, 55%);
-  text-decoration: none;
-}
-
 .plan-row::after {
   content: "";
   display: table;
@@ -111,14 +106,6 @@ button {
   width: auto;
 }
 
-#proceed-btn:hover {
-  background: hsl(224, 23%, 55%);
-}
-
-#cancel-btn:hover {
-  color: hsl(223, 47%, 23%);
-}
-
 /* Given Styles for attribution text */
 .attribution {
   font-size: 11px;
@@ -130,6 +117,21 @@ button {
 }
 
 /* Media Queries for Responsiveness */
+
+@media (min-width: 501px) {
+  .right a:hover {
+    color: hsl(224, 23%, 55%);
+    text-decoration: none;
+  }
+  
+  #proceed-btn:hover {
+    background: hsl(224, 23%, 55%);
+  }
+  
+  #cancel-btn:hover {
+    color: hsl(223, 47%, 23%);
+  }
+}
 
 @media (max-width: 500px) {
   body {
@@ -158,6 +160,11 @@ button {
     min-width: 90%;
   }
 
+  .right a:active {
+    color: hsl(224, 23%, 55%);
+    text-decoration: none;
+  }  
+
   button {
     margin: 1.25em auto;
   }
@@ -165,5 +172,13 @@ button {
   #cancel-btn {
     padding-top: 0;
     padding-bottom: 1.25em;
+  }
+
+  #proceed-btn:active {
+    background: hsl(224, 23%, 55%);
+  }
+  
+  #cancel-btn:active {
+    color: hsl(223, 47%, 23%);
   }
 }
